--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,9 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'create_event' %}">Créer un événement</a>
             </li>
+              <li class="nav-item">
+              <a class="nav-link" href="{% url 'organizer_dashboard' %}">Tableau de bord</a>
+            </li>
           {% endif %}
           <li class="nav-item">
             <a class="nav-link" href="#">👤 {{ user.username }}</a>
