--- a/templates/base.html
+++ b/templates/base.html
@@ -56,5 +56,32 @@
 <script src="{% static 'js/background.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+
+<footer class="footer">
+  <div class="container">
+      <p>&copy; 2026 EventPass - Développé par <strong>Darius BOULANGA</strong></p>
+  </div>
+
+  <p>
+    Suivez-moi sur : 
+    <a href="https://github.com/Darius-BOUL" style="color: #3498db; margin: 0 10px;">GitHub</a> | 
+    <a href="https://www.linkedin.com/in/darius-boulanga-b0ba65177/" style="color: #3498db; margin: 0 10px;">LinkedIn</a>
+  </p>
+</footer>
+
+<style>
+  .footer {
+      background-color: #2c3e50;
+      color: white;
+      text-align: center;
+      padding: 20px 0;
+      margin-top: 50px;
+      width: 100%;
+  }
+  .footer strong {
+      color: #3498db; /* couleur du nom */
+  }
+</style>
+</body>
 </body>
 </html>
