--- a/templates/payments/simulate_payment.html
+++ b/templates/payments/simulate_payment.html
@@ -5,7 +5,7 @@
   <div class="col-md-8 col-lg-6">
     <div class="card shadow-sm">
       <div class="card-body">
-        <h2 class="card-title text-center mb-4">💳 Paiement du billet</h2>
+        <h2 class="card-title text-center mb-4">Paiement du billet</h2>
 
         <ul class="list-group list-group-flush mb-3">
           <li class="list-group-item"><strong>Événement :</strong> {{ ticket.event.title }}</li>
